# typesync-rust

./: .env  .gitignore  .prod.env  Cargo.toml  README.md  Rocket.toml  flake.nix  justfile  typesync.db
api/: Cargo.toml
api/src/: db.rs  genius.rs  lib.rs  main.rs
client/: Cargo.toml  index.css  index.html
client/scss/: _all.scss  _finished.scss  _leaderboard.scss  _progress_bar.scss  _reset.scss  _search_bar.scss  _song_summary.scss  _title.scss  _typing_test.scss  index.scss
client/src/: api_call.rs  finished.rs  lib.rs  popular.rs  search_bar.rs  song_summary.rs  title.rs  typing_test.rs
migrations/2020-10-25-104207_score/: up.sql
src/: lib.rs  lyrics.rs  models.rs  score.rs  song.rs
src/db/: schema.rs
