[package]
name = "typesync"
version = "0.1.0"
authors = ["David Purdum <purdum41@gmail.com>"]
edition = "2018"

[workspace]
members = ["client", "api"]

[features]
database = ["diesel"]

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
unicode-normalization = "0.1.13"
diesel = { version = "1.4.5", features = ["sqlite", "chrono", "numeric"], optional = true }
chrono = "0.4"
