[package]
name = "api"
version = "0.1.0"
authors = ["David Purdum <purdum41@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typesync = { path = ".." }
rocket = "0.4.5"
rocket_cors = { version = "0.5.2", default-features = false }
reqwest = { version = "0.10.8", features = ["blocking", "json"] }
serde_json = "1.0.59"
futures = "0.3.6"
tokio = { version = "0.3.1", features = ["full"] }

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]
