[package]
name = "client"
version = "0.1.0"
authors = ["David Purdum <purdum41@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
typesync = { path = ".." }
seed = "^0.8.0"
wasm-bindgen = "^0.2.68"
web-sys = { version = "0.3.45" }
wasm-timer = "0.2.5"
chrono = "0.4"
lazy_static = "1.4.0"
